--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -51,10 +51,10 @@
     />
   </noscript>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
-  <link rel="icon" type="image/svg+xml" href="../img/favicon.svg">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/img/apple-touch-icon.png' | url }}">
+  <link rel="icon" type="image/svg+xml" href="{{ '/img/favicon.svg' | url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/img/favicon-32x32.png' | url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/img/favicon-16x16.png' | url }}">
 
   <link rel="manifest" href="{{'/site.webmanifest' | url}}">
 
