chore: migrate pre-11ty posts

--- a/src/_components/_singletop.njk
+++ b/src/_components/_singletop.njk
@@ -39,7 +39,7 @@
     <div class="grid grid-cols-12 gap-5 mb-6">
       <div class="col-start-1 col-end-12 lg:col-end-8 pt-10">
         <h1 class="text-5xl md:text-5xl md:leading-tight tracking-tighter font-bold text-gray-800 dark:text-white">{{title}}</h1>
-        <P class="mt-6 text-lg font-normal dark:text-gray-300">{{ description }}</p>
+        <p class="mt-6 text-lg font-normal dark:text-gray-300">{{ description }}</p>
       </div>
     </div>
   {% endif %}
@@ -50,7 +50,7 @@
     <div class="md:grid grid-cols-10 gap-x-10 gap-y-5 mt-12">
       <div class="col-span-full lg:col-start-3 lg:col-end-9">
         <h1 class="text-4xl md:text-5xl font-bold tracking-tighter dark:text-white">{{title}}</h1>
-        <P class="mt-6 text-xl font-xl dark:text-gray-300">{{ description }}</p>
+        <p class="mt-6 text-xl font-xl dark:text-gray-300">{{ description }}</p>
       </div>
       {% if featuredImg %}
           {% respimg featuredImg, title, 'mt-6 col-span-full lg:col-start-2 lg:col-end-10 w-full mb-5' %}
