--- a/src/_components/_header.njk
+++ b/src/_components/_header.njk
@@ -25,7 +25,7 @@
               target="_blank"
               rel="noreferrer"
               class="text-gray-800 dark:text-yellow-300 py-2 px-5 rounded-full font-bold border-2 border-gray-900 dark:border-yellow-100 border-opacity-20 transition-colors hover:border-opacity-100"
-            ><span>Résumé</span>
+            ><span>resume.</span>
             </a>
           </li>
         </ul>
