--- a/src/feed/feed.njk
+++ b/src/feed/feed.njk
@@ -4,10 +4,10 @@ permalink: "{{ metadata.feed.path }}"
 eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
-<feed xmlns="http://www.w3.org/2005/Atom">
+<feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ metadata.language }}">
   <title>{{ metadata.title }}</title>
   <subtitle>{{ metadata.feed.subtitle }}</subtitle>
-  <link href="{{ metadata.feed.url }}" rel="self"/>
+  <link href="{{ permalink | url | absoluteUrl(metadata.url) }}" rel="self"/>
   <link href="{{ metadata.url }}"/>
   <updated>{{ collections.posts | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
   <id>{{ metadata.url }}</id>
@@ -23,7 +23,13 @@ eleventyExcludeFromCollections: true
       <link href="{{ absolutePostUrl }}"/>
       <updated>{{ post.date | dateToRfc3339 }}</updated>
       <id>{{ absolutePostUrl }}</id>
-      <content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
+      <content type="html">
+        {%- if normalizeAbsoluteUrls -%}
+          {{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}
+        {%- else -%}
+          {{ post.templateContent }}
+        {%- endif -%}
+      </content>
     </entry>
     {% endif %}
   {%- endfor %}
