fix: xml:base lang

--- a/src/feed/feed.njk
+++ b/src/feed/feed.njk
@@ -4,10 +4,10 @@ permalink: "{{ metadata.feed.path }}"
 eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
-<feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ metadata.language }}">
+<feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ metadata.feed.language }}">
   <title>{{ metadata.title }}</title>
   <subtitle>{{ metadata.feed.subtitle }}</subtitle>
-  <link href="{{ permalink | url | absoluteUrl(metadata.url) }}" rel="self"/>
+  <link href="{{ metadata.feed.url }}" rel="self"/>
   <link href="{{ metadata.url }}"/>
   <updated>{{ collections.posts | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
   <id>{{ metadata.url }}</id>
