fix: spelling is hard

--- a/src/_components/_footer.njk
+++ b/src/_components/_footer.njk
@@ -1,7 +1,7 @@
 {% if '/posts' not in page.url %}
 <div class="relative max-w-screen-md mx-auto py-32 md:py-32 md:leading-tight text-center font-bold tracking-tighter text-3xl md:text-5xl px-10">
   <span class="block">⚡</span>
-  I am <span class="text-green-700">open</span> for opportunties. <br>If you would like to have a conversation, please get in touch.
+  I am <span class="text-green-700">open</span> for opportunities. <br>If you would like to have a conversation, please get in touch.
   <div>
     <a
       href="{{ metadata.author.mailtolink }}"
