chore: image migration to conr.dev

--- a/src/_components/_navigations.njk
+++ b/src/_components/_navigations.njk
@@ -25,8 +25,8 @@
             class="inline"
             loading="lazy"
             alt="{{ previousPost.data.title }}"
-            src="https://res.cloudinary.com/conrmahr/image/upload/v1613700746/conormeagher.com/{{previousPost.data.featuredImg}}.jpg"
-            srcset="https://res.cloudinary.com/conrmahr/image/upload/dpr_auto,q_auto,w_200/v1613700746/conormeagher.com/{{previousPost.data.featuredImg}}.jpg 400w"
+            src="https://res.cloudinary.com/conrmahr/image/upload/v1613700746/conr.dev/{{previousPost.data.featuredImg}}.jpg"
+            srcset="https://res.cloudinary.com/conrmahr/image/upload/dpr_auto,q_auto,w_200/v1613700746/conr.dev/{{previousPost.data.featuredImg}}.jpg 400w"
           />
         </picture>
       {% endif %}
@@ -45,8 +45,8 @@
             class="inline"
             loading="lazy"
             alt="{{ nextPost.data.title }}"
-            src="https://res.cloudinary.com/conrmahr/image/upload/v1613700746/conormeagher.com/{{nextPost.data.featuredImg}}.jpg"
-            srcset="https://res.cloudinary.com/conrmahr/image/upload/dpr_auto,q_auto,w_200/v1613700746/conormeagher.com/{{nextPost.data.featuredImg}}.jpg 400w"
+            src="https://res.cloudinary.com/conrmahr/image/upload/v1613700746/conr.dev/{{nextPost.data.featuredImg}}.jpg"
+            srcset="https://res.cloudinary.com/conrmahr/image/upload/dpr_auto,q_auto,w_200/v1613700746/conr.dev/{{nextPost.data.featuredImg}}.jpg 400w"
           />
         </picture>
       {% endif %}
