--- a/src/_components/_postslist.njk
+++ b/src/_components/_postslist.njk
@@ -8,8 +8,8 @@
             <img
               loading="lazy"
               alt="{{ post.data.title }}"
-              src="https://res.cloudinary.com/conrmahr/image/upload/v1613700746/conormeagher.com/{{post.data.featuredImg}}.jpg"
-              srcset="https://res.cloudinary.com/conrmahr/image/upload/dpr_auto,q_auto,w_295/v1613700746/conormeagher.com/{{post.data.featuredImg}}.jpg 768w"
+              src="https://res.cloudinary.com/conrmahr/image/upload/v1613700746/conr.dev/{{post.data.featuredImg}}.jpg"
+              srcset="https://res.cloudinary.com/conrmahr/image/upload/dpr_auto,q_auto,w_295/v1613700746/conr.dev/{{post.data.featuredImg}}.jpg 768w"
             />
           </picture>
 
