chore: migrate to GA4

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -63,14 +63,14 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KBJXMGHQ44"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ET81J6K01P"></script>
   <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-KBJXMGHQ44');
-  </script><script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    gtag('config', 'G-ET81J6K01P');
+  </script>
 </head>
 
 <body
